[package]
name = "chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["postgres"] }
dotenvy = "0.15"
handlebars = "4.3.5"
rocket = "0.5.0-rc.2"

[dependencies.rocket_contrib]
version = "0.4.11"
default-features = false
features = ["handlebars_templates"]

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["handlebars"]